filters working and fixed wierd problem with thing not showing

--- a/app/css/base.css
+++ b/app/css/base.css
@@ -75,3 +75,11 @@ ul {
     width: 200px;
     height: 303px;
 }
+
+.spell{
+    background-color: yellow;
+}
+.minion{
+    background-color: green;
+}
+
